Første versjon insert av saksstatistikkrader på utkast.
Co-authored-by: Julie Hill Roa <julie.hill.roa@nav.no>